...
        component={PetListScreen}
        options={{ tabBarLabel: 'Pets', tabBarIcon: () => <Text>🐾</Text> }}
      />
      <Tab.Screen
        name="Scan"
        component={RedeemTagScreen}
        options={{ tabBarLabel: 'Activate', tabBarIcon: () => <Text>🏷️</Text> }}
      />
    </Tab.Navigator>
  );
}

const screenOptions = {
...
